<resources>
    <string name="app_name">22nd BCS Admin Forum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="FACEBOOK_APP_ID">377013812891228</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">242c0ef5b321bacc14a41618356f03d3</string>

    <string name="left_menu_cadre_division">ক্যাডারের বিভাগ সমূহ</string>
    <string name="left_menu_cadre">ক্যাডারের নামের তালিকা</string>
    <string name="left_menu_forum_committee">ফোরাম কমিটির তালিকা</string>
    <string name="left_menu_forum_structure">ফোরামের গঠনতন্ত্র</string>

    <string name="president_name_15">মনিরুল ইসলাম</string>
    <string name="president_designation1_15">বিপিএম (বার), পিপিএম (বার)</string>
    <string name="president_designation2_15">অতিরিক্ত পুলিশ কমিশনার</string>
    <string name="president_designation3_15">কাউন্টার টেররিজম এন্ড ট্রান্সন্যাশনাল ক্রাইম ইউনিট\nডিএমপি, ঢাকা</string>
    <string name="president_designation4_15">সভাপতি - ১৫তম বিসিএস ফোরাম</string>

    <string name="president_name_22">কাজী নিশাত রসুল</string>
    <string name="president_designation1_22">মাননীয় প্রধানমন্ত্রীর সহকারী একান্ত সচিব (উপ-সচিব)</string>
    <string name="president_designation2_22">প্রধানমন্ত্রীর কার্যালয়</string>
    <string name="president_designation3_22">সভাপতি - ২২তম বিসিএস ফোরাম</string>


    <string name="text_logout">লগ আউট</string>
    <string name="txt_profile_edit">প্রোফাইল এডিট করুন</string>

    <string name="txt_id_no">পরিচিতি নাম্বারঃ ..............</string>
    <string name="txt_current_employment">বর্তমান কর্মস্থলঃ ..............</string>
    <string name="txt_previous_employment">পূর্বের কর্মস্থলঃ ..............</string>
    <string name="txt_district">নিজ জেলাঃ ..............</string>
    <string name="txt_dob">জন্ম তারিখঃ ..............</string>
    <string name="txt_phone_no">মোবাইলঃ ..............</string>
    <string name="txt_email">ইমেইলঃ .............</string>
    <string name="bcs_22_name">22 তম বিসিএস (এডমিন) ফোরাম</string>
    <string name="bcs_15_name">১৫ তম বিসিএস ফোরাম</string>

    <string name="proposer_name_22">মোহাম্মদ আব্দুল হাই, পি এ এ</string>
    <string name="proposer_designation1_22">প্রকল্প পরিচালক (ডেপুটি সেক্রেটারি)</string>
    <string name="proposer_designation2_22">স্কিল ডেভেলপমেন্ট ফর মোবাইল গেইম এন্ড এপ্লিকেশন প্রজেক্ট</string>

    <string name="proposer_name_15">ব্যারিস্টার মোঃ গোলাম সরওয়ার ভুঁইয়া</string>
    <string name="proposer_designation1_15">প্রকল্প পরিচালক (ডেপুটি সেক্রেটারি)</string>
    <string name="proposer_designation2_15">হাই-টেক পার্কের জন্য মৌলিক অবকাঠামো (সিলেট প্রকল্প)</string>
    <string name="proposer_designation3_15">বাংলাদেশ হাই-টেক পার্ক কর্তৃপক্ষ</string>
    <string name="proposer_designation4_15">তথ্য ও যোগাযোগ প্রযুক্তি বিভাগ</string>
</resources>
