<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/left_drawer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:background="@android:color/white"
            android:orientation="vertical">

            <include layout="@layout/nav_header_main" />

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_header"
                android:layout_alignParentBottom="true"
                android:clipToPadding="true"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:drawSelectorOnTop="false"
                android:fastScrollEnabled="false"
                android:scrollbarStyle="outsideOverlay"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/nav_cadre_cetegory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/nav_list_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left_menu_cadre"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_forum_committee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/nav_list_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left_menu_forum_committee"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_forum_structure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/nav_list_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_chart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left_menu_forum_structure"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimary"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/text_logout"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ডেভেলপঃ"
                        android:textColor="@android:color/black"
                        android:textSize="10sp" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="32dp"
                        android:src="@drawable/inflack_logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="বাড়ি# ৩৬, রোড# ১, ব্লক# এ\nবসুন্ধরা আ/এ, ঢাকা-১২২৯, বাংলাদেশ"
                        android:textColor="@android:color/black"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="অফিসঃ +৮৮০ ১৭০৮ ০০৬১৬৮"
                        android:textColor="@android:color/black"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ই-মেইলঃ info@inflack.com"
                        android:textColor="@android:color/black"
                        android:textSize="10sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="32dp"
                        android:src="@drawable/inflack_logo"
                        android:visibility="invisible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="উদ্যেক্তাঃ"
                        android:textColor="@android:color/black"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/proposer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/proposer_designation_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/proposer_designation_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/proposer_designation_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/proposer_designation_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="10sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.DrawerLayout>
